# solana-trading-cli

./: .env.example  .gitignore  Dockerfile  Makefile  QUICK-START.md  README-PRODUCTION.md  README-TRIFECTA.md  README.md  docker-compose.kestra.yml  infisical.json  package.json  tsconfig.json  update discord invite
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  dependency-update.yml  release.yml  security.yml
docs/: GITHUB-SETUP.md  ML-VALIDATION-CHECKLIST.md  RUNBOOK.md  TRADING-STRATEGIES.md  UNIFIED-ARCHITECTURE.md
examples/: README.md  e2e-integration.ts  production-integration.ts  strategy-testing.ts  streaming-demo.ts  unified-router-demo.ts
exec-rs/: Cargo.toml
exec-rs/src/: jupiter.rs  main.rs  utils.rs
exec-rs/src/commands/: mod.rs  ping.rs  simulate.rs  swap.rs
kestra/: README.md  docker-compose.yml
kestra/flows/: e2e-integration.yml  health.yml  infisical-secrets.yml  minimal-stream.yml  minimal-trade.yml  model-search.yml  paper-trading.yml  production-stream.yml  production-trade.yml  strategy-shadow-mode.yml  stream.yml  trade.yml
monitoring/prometheus/: prometheus.yml
scripts/: configure.sh  deploy.sh  e2e-test.sh  run-all.sh  scale.sh  setup-github.sh  setup-monitoring.sh  test-contracts.sh  test-flows.sh
secrets/: wallet.json
src/: index.ts
src/config/: infisical.ts
src/data/: data-aggregator.ts  index.ts  yellowstone-client.ts
src/execution/: account-manager.ts  index.ts
src/grpc/: client.ts  index.ts  streaming-service.ts  (+2 more)
(+40 files in other folders)
