[package]
name = "exec-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana dependencies
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-transaction-status = "1.18"

# Jupiter SDK
jupiter-swap-api-client = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Base64 encoding
base64 = "0.21"

# UUID for idempotency
uuid = { version = "1.0", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "exec-rs"
path = "src/main.rs"
